--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "birthday-wisher",
+  "name": "rishikalove",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://someshkar.github.io/birthday-wisher",
+  "homepage": "https://fluxx-neofyt.github.io/rishikalove",
   "dependencies": {
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
